--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <title>Title</title>
 <head>
-    <script type="text/javascript" src="script/tank.js"></script>
-    <script type="text/javascript" src="script/game.js"></script>
+    <script type="text/javascript" src="javascript/wall.js"></script>
+    <script type="text/javascript" src="javascript/bomber.js"></script>
+    <script type="text/javascript" src="javascript/map.js"></script>
+    <script type="text/javascript" src="javascript/animation.js"></script>
+    <script type="text/javascript" src="javascript/game.js"></script>
 </head>
 <body>
 
